--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap');
     </style>
-    <title>Vite + React</title>
+    <title>JobPro</title>
   </head>
   <body>
     <div id="root"></div>
